--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container-lg px-5">
+      <!-- changing the classes and removing the past present and future and making it so I use addclass in javascript and add the class then instead of in the index -->
       <div id="hour-9" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea id="hour-9-text" class="col-8 col-md-10 description" rows="3"> </textarea>
